0.12.13
=======
 * Honor umask when creating directories for Audio CD ripping.

0.12.12
=======
 * Fixed another bug in the iso options code which sometimes resulted in a failed verification.
 * Properly close the reading device when copying VideoDVDs. This bug resulted in a blocked device.
 * Fixed handling of filenames in libdvdcss backend (this fixes VideoDVD copy).

0.12.11
=======
 * Fixed selection in the audio CD ripping window.
 * Fixed info block handling in WAVE audio file decoder: no more clicks at the end.
 * Introduced a hack which fixes the "Wav detected as Mpeg file" bug.
 * Fixed Auto multisession mode for DVD+RW and DVD-RW in restricted overwrite mode in case
   a previous session was imported.
 * Fixed a crash with HAL >= 0.5 when exiting K3b.
 * Allow copying of double layer DVDs with a size below 4.3 GB to single layer media.
 * Support for the ring buffer in growisofs 6.0.
 * Use .iso extension for images instead of .img
 * Properly remove the image file in case verification failed.
 * Ignore mounting state of a medium when showing its contents.
 * Fixed a bug in the iso options code which sometimes resulted in a failed verification.
 * Properly handle cue files withan image file name like image.bin.cue + image.bin
 * Write a proper Xing header when encoding VBR mp3 files.

0.12.10
=======
 * Fixed Auto multisession mode in DVD projects
 * Fixed crash in dcop call directBurn in case no valid burner device was set.
 * Fixed verification of datacd projects when using the MaxIso9660 option without the OmitVersionNumber option

0.12.9
======
 * New project dcop calls:
    directBurn() - directly starts the burn process without user interaction
    setBurnDevice(QString) - set the burn device to be used
 * Disable the cd-text fields if cd-text writing is disabled.
 * New Alsa audio output plugin.
 * If a DVD project does not fill up the DVD completely do not close the DVD in automatic 
   multisession mode.